--- a/index.html
+++ b/index.html
@@ -4,39 +4,50 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./styles/style.css" />
-        <title>Calculator</title>
+        <title>calculator</title>
     </head>
     <body>
         <div class="container">
-            <input type="text" class="display" />
-            <!-- Add your classes or ids -->
-            <div class="buttons">
-                <button>AC</button>
-                <button>DEL</button>
-                <button>%</button>
-                <button>/</button>
+            <div class="calculator">
+                <form class="form">
+                    <div class="display">
+                        <input type="text" name="display" id="inputBox" />
+                    </div>
+                    <div class="button">
+                        <button class="operator">AC</button>
+                        <button class="operator">DEL</button>
+                        <button class="operator">%</button>
+                        <button class="operator">/</button>
+                        <div></div>
 
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>*</button>
+                        <button class="number">7</button>
+                        <button class="number">8</button>
+                        <button>9</button>
+                        <button class="operator">*</button>
 
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>-</button>
+                        <div></div>
 
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>+</button>
+                        <button>4</button>
+                        <button>5</button>
+                        <button>6</button>
+                        <button class="operator">-</button>
+                        <div></div>
 
-                <button>0</button>
-                <button>00</button>
-                <button>.</button>
-                <button></button>
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                        <button class="operator">+</button>
+                        <div></div>
+
+                        <button>0</button>
+                        <button>00</button>
+                        <button>.</button>
+                        <button class="equalBtn">=</button>
+                    </div>
+
+                    <script src="./src/main.js"></script>
+                </form>
             </div>
         </div>
-        <script src="./src/main.js"></script>
     </body>
 </html>
